<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/point_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:elevation="2dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardUseCompatPadding="true"
    card_view:cardElevation="2dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:orientation="horizontal"
        android:theme="@style/Animation.AppCompat.Tooltip">
        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:scaleType="fitCenter"
            android:layout_height="match_parent"
            android:layout_weight="62" />
        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_weight="38"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>