...
            android:scaleType="fitCenter"
            android:layout_margin="8dp"
            android:contentDescription="@string/desc"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout2"
            tools:layout_editor_absoluteX="8dp" />
        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_marginEnd="16dp"
            android:importantForAutofill="no"
            android:gravity="start"
...
