...
                android:onClick="btCategoryPressed"
                android:textSize="16sp" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/points_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:foregroundGravity="top"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/adView"
...
